--- a/templates/list_of_items.html
+++ b/templates/list_of_items.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    {% for figure in figures %}
-    {{ figure | safe }}
+    {% for item in list_of_items %}
+    {{ item | safe }}
     {% endfor %}
 </body>
 
